fix example